Fixed layout issue with narrow screen on Django < 3.1

--- a/postgres_metrics/static/postgres_metrics/css/base.css
+++ b/postgres_metrics/static/postgres_metrics/css/base.css
@@ -20,6 +20,10 @@
   min-height: 0;
 }
 
+.app-postgres_metrics table#result_list td {
+  word-wrap: anywhere;
+}
+
 tr.pgm-critical,
 td.pgm-critical {
   background-color: #ffefef;
